--- a/templates/home.html
+++ b/templates/home.html
@@ -42,7 +42,7 @@
                         <a href="#" onclick="logout()" class="logout-link">Logout</a>
                     </div>
                 </div>
-                <div class="auth-cta" id="authCTA">
+                <div class="auth-cta" id="authCTA" style="display: none;">
                     <a href="/login" class="btn-primary">Sign In</a>
                 </div>
                 </nav>
