--- a/templates/compare_new.html
+++ b/templates/compare_new.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="pro-actions">
-                    <a href="/pricing" class="btn-primary btn-large">Upgrade to Pro</a>
+                    <a href="/pricing" class="btn-primary btn-upgrade">Upgrade to Pro</a>
                     <a href="/upload" class="btn-secondary">Analyze Single Document</a>
                 </div>
             </div>
