--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     </div>
     
     <!-- JavaScript -->
+    <script src="/static/script.js"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
